welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:5: error: ')' expected but $XMLSTART$< found.
  else if(a%5==b%5 && a <b){
                        ^maxMod5:17: error: illegal start of simple expression
} 
^